se corrige estilos

--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
@@ -26,7 +26,9 @@
 
 			<androidx.constraintlayout.widget.ConstraintLayout
 				android:layout_width="match_parent"
-				android:layout_height="match_parent">
+				android:layout_height="match_parent"
+				android:layout_marginTop="50dp"
+				android:layout_marginBottom="50dp">
 
 				<ImageView
 					android:id="@+id/ivCongratulations"
@@ -37,18 +39,37 @@
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toTopOf="parent" />
-
-				<androidx.constraintlayout.widget.ConstraintLayout
+				<!--				<androidx.constraintlayout.widget.ConstraintLayout-->
+				<!--					android:layout_width="wrap_content"-->
+				<!--					android:layout_height="wrap_content"-->
+				<!--					android:layout_margin="50dp"-->
+				<!--					app:layout_constraintBottom_toBottomOf="parent"-->
+				<!--					app:layout_constraintEnd_toEndOf="parent"-->
+				<!--					app:layout_constraintStart_toStartOf="parent"-->
+				<!--					app:layout_constraintTop_toTopOf="parent">-->
+				<TextView
+					android:id="@+id/tvJuegoCantidadPalabras"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_margin="50dp"
-					app:layout_constraintBottom_toBottomOf="parent"
+					android:gravity="center"
+					android:text="TextView"
+					android:textSize="@dimen/tamanioTextoJuegoVI"
+					android:textStyle="bold"
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toTopOf="parent">
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<androidx.constraintlayout.widget.ConstraintLayout
+					android:id="@+id/lyContenedor"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="16dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras">
 
 					<TextView
-						android:id="@+id/tvJuegoCantidadPalabras"
+						android:id="@+id/tvJuegoPalabraAdivinar"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:gravity="center"
@@ -59,159 +80,228 @@
 						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toTopOf="parent" />
 
-					<androidx.constraintlayout.widget.ConstraintLayout
-						android:id="@+id/lyContenedor"
+					<com.google.android.material.textfield.TextInputLayout
+						android:id="@+id/etRespuestaContenedor"
+						style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+						android:layout_width="180dp"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="24dp"
+						android:hint="Respuesta"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAdivinar">
+
+						<com.google.android.material.textfield.TextInputEditText
+							android:id="@+id/etRespuesta"
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content" />
+					</com.google.android.material.textfield.TextInputLayout>
+				</androidx.constraintlayout.widget.ConstraintLayout>
+
+				<androidx.constraintlayout.widget.ConstraintLayout
+					android:id="@+id/lyRespuestaJuego"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:layout_marginTop="24dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/lyContenedor">
+
+					<TextView
+						android:id="@+id/tvSolucion"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:gravity="center"
+						android:text="TextView"
+						android:textSize="@dimen/tamanioTextoJuegoVI"
+						android:textStyle="bold"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toTopOf="parent" />
+
+					<TextView
+						android:id="@+id/tvCantidadIntentosRestantes"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="16dp"
+						android:gravity="center"
+						android:text="TextView"
+						android:textSize="@dimen/tamanioTextoJuegoVI"
+						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras">
-
-						<TextView
-							android:id="@+id/tvJuegoPalabraAdivinar"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:gravity="center"
-							android:text="TextView"
-							android:textSize="@dimen/tamanioTextoJuegoVI"
-							android:textStyle="bold"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<com.google.android.material.textfield.TextInputLayout
-							android:id="@+id/etRespuestaContenedor"
-							style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-							android:layout_width="180dp"
-							android:layout_height="wrap_content"
-							android:layout_marginTop="24dp"
-							android:hint="Respuesta"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAdivinar">
-
-							<com.google.android.material.textfield.TextInputEditText
-								android:id="@+id/etRespuesta"
-								android:layout_width="match_parent"
-								android:layout_height="wrap_content" />
-						</com.google.android.material.textfield.TextInputLayout>
-					</androidx.constraintlayout.widget.ConstraintLayout>
-
-					<androidx.constraintlayout.widget.ConstraintLayout
-						android:id="@+id/lyRespuestaJuego"
-						android:layout_width="match_parent"
-						android:layout_height="match_parent"
-						android:layout_marginTop="24dp"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyContenedor">
-
-						<TextView
-							android:id="@+id/tvSolucion"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:gravity="center"
-							android:text="TextView"
-							android:textSize="@dimen/tamanioTextoJuegoVI"
-							android:textStyle="bold"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<TextView
-							android:id="@+id/tvCantidadIntentosRestantes"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:layout_marginTop="16dp"
-							android:gravity="center"
-							android:text="TextView"
-							android:textSize="@dimen/tamanioTextoJuegoVI"
-							android:textStyle="bold"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toBottomOf="@+id/tvSolucion" />
-					</androidx.constraintlayout.widget.ConstraintLayout>
-
-					<androidx.constraintlayout.widget.ConstraintLayout
-						android:layout_width="match_parent"
-						android:layout_height="match_parent"
-						android:layout_marginTop="32dp"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">
-
-						<com.google.android.material.button.MaterialButton
-							android:id="@+id/btPrevious"
-							style="@style/Widget.MaterialComponents.Button"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:text="Previous"
-							app:backgroundTint="#82B1FF"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<com.google.android.material.button.MaterialButton
-							android:id="@+id/btRestart"
-							style="@style/Widget.MaterialComponents.Button"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:text="Restart"
-							app:backgroundTint="#82B1FF"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<com.google.android.material.button.MaterialButton
-							android:id="@+id/btVolver"
-							style="@style/Widget.MaterialComponents.Button"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:layout_marginEnd="16dp"
-							android:text="Volver"
-							app:backgroundTint="#82B1FF"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintEnd_toStartOf="@+id/btRestart"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<com.google.android.material.button.MaterialButton
-							android:id="@+id/btNext"
-							style="@style/Widget.MaterialComponents.Button"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:layout_marginStart="24dp"
-							android:text="Next"
-							app:backgroundTint="#82B1FF"
-							app:layout_constraintStart_toEndOf="@+id/btPrevious"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<com.google.android.material.button.MaterialButton
-							android:id="@+id/btEvaluar"
-							style="@style/Widget.MaterialComponents.Button"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:layout_marginStart="24dp"
-							android:text="Evaluar"
-							app:backgroundTint="#82B1FF"
-							app:layout_constraintStart_toEndOf="@+id/btPrevious"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<com.google.android.material.button.MaterialButton
-							android:id="@+id/btDificultad"
-							style="@style/Widget.MaterialComponents.Button"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							app:backgroundTint="#ADADAD"
-							app:icon="@drawable/ic_smile"
-							app:iconGravity="textStart"
-							app:iconPadding="0dp"
-							app:iconSize="25dp"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toBottomOf="@+id/btRestart" />
-					</androidx.constraintlayout.widget.ConstraintLayout>
+						app:layout_constraintTop_toBottomOf="@+id/tvSolucion" />
 				</androidx.constraintlayout.widget.ConstraintLayout>
+				<!--					<androidx.constraintlayout.widget.ConstraintLayout-->
+				<!--						android:layout_width="match_parent"-->
+				<!--						android:layout_height="match_parent"-->
+				<!--						android:layout_marginTop="32dp"-->
+				<!--						app:layout_constraintEnd_toEndOf="parent"-->
+				<!--						app:layout_constraintStart_toStartOf="parent"-->
+				<!--						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">-->
+				<!--						<com.google.android.material.button.MaterialButton-->
+				<!--							android:id="@+id/btPrevious"-->
+				<!--							style="@style/Widget.MaterialComponents.Button"-->
+				<!--							android:layout_width="wrap_content"-->
+				<!--							android:layout_height="wrap_content"-->
+				<!--							android:text="Previous"-->
+				<!--							app:backgroundTint="#82B1FF"-->
+				<!--							app:layout_constraintStart_toStartOf="parent"-->
+				<!--							app:layout_constraintTop_toTopOf="parent" />-->
+				<!--						<com.google.android.material.button.MaterialButton-->
+				<!--							android:id="@+id/btRestart"-->
+				<!--							style="@style/Widget.MaterialComponents.Button"-->
+				<!--							android:layout_width="wrap_content"-->
+				<!--							android:layout_height="wrap_content"-->
+				<!--							android:text="Restart"-->
+				<!--							app:backgroundTint="#82B1FF"-->
+				<!--							app:layout_constraintEnd_toEndOf="parent"-->
+				<!--							app:layout_constraintTop_toTopOf="parent" />-->
+				<!--						<com.google.android.material.button.MaterialButton-->
+				<!--							android:id="@+id/btVolver"-->
+				<!--							style="@style/Widget.MaterialComponents.Button"-->
+				<!--							android:layout_width="wrap_content"-->
+				<!--							android:layout_height="wrap_content"-->
+				<!--							android:layout_marginEnd="16dp"-->
+				<!--							android:text="Volver"-->
+				<!--							app:backgroundTint="#82B1FF"-->
+				<!--							app:layout_constraintEnd_toEndOf="parent"-->
+				<!--							app:layout_constraintEnd_toStartOf="@+id/btRestart"-->
+				<!--							app:layout_constraintStart_toStartOf="parent"-->
+				<!--							app:layout_constraintTop_toTopOf="parent" />-->
+				<!--						<com.google.android.material.button.MaterialButton-->
+				<!--							android:id="@+id/btNext"-->
+				<!--							style="@style/Widget.MaterialComponents.Button"-->
+				<!--							android:layout_width="wrap_content"-->
+				<!--							android:layout_height="wrap_content"-->
+				<!--							android:layout_marginStart="24dp"-->
+				<!--							android:text="Next"-->
+				<!--							app:backgroundTint="#82B1FF"-->
+				<!--							app:layout_constraintStart_toEndOf="@+id/btPrevious"-->
+				<!--							app:layout_constraintTop_toTopOf="parent" />-->
+				<!--						<com.google.android.material.button.MaterialButton-->
+				<!--							android:id="@+id/btEvaluar"-->
+				<!--							style="@style/Widget.MaterialComponents.Button"-->
+				<!--							android:layout_width="wrap_content"-->
+				<!--							android:layout_height="wrap_content"-->
+				<!--							android:layout_marginStart="24dp"-->
+				<!--							android:text="Evaluar"-->
+				<!--							app:backgroundTint="#82B1FF"-->
+				<!--							app:layout_constraintStart_toEndOf="@+id/btPrevious"-->
+				<!--							app:layout_constraintTop_toTopOf="parent" />-->
+				<!--						<com.google.android.material.button.MaterialButton-->
+				<!--							android:id="@+id/btDificultad"-->
+				<!--							style="@style/Widget.MaterialComponents.Button"-->
+				<!--							android:layout_width="wrap_content"-->
+				<!--							android:layout_height="wrap_content"-->
+				<!--							app:backgroundTint="#ADADAD"-->
+				<!--							app:icon="@drawable/ic_smile"-->
+				<!--							app:iconGravity="textStart"-->
+				<!--							app:iconPadding="0dp"-->
+				<!--							app:iconSize="25dp"-->
+				<!--							app:layout_constraintEnd_toEndOf="parent"-->
+				<!--							app:layout_constraintStart_toStartOf="parent"-->
+				<!--							app:layout_constraintTop_toBottomOf="@+id/btRestart" />-->
+				<!--					</androidx.constraintlayout.widget.ConstraintLayout>-->
+				<TableLayout
+					android:id="@+id/tableLayout2"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_marginTop="32dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">
+
+					<TableRow
+						android:layout_width="match_parent"
+						android:layout_height="match_parent">
+
+						<androidx.constraintlayout.widget.ConstraintLayout
+							android:layout_width="match_parent"
+							android:layout_height="match_parent"
+							android:layout_weight="1">
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btPrevious"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Previous"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btVolver"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Volver"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+						</androidx.constraintlayout.widget.ConstraintLayout>
+
+						<androidx.constraintlayout.widget.ConstraintLayout
+							android:layout_width="match_parent"
+							android:layout_height="match_parent"
+							android:layout_weight="1">
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btNext"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Next"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btEvaluar"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Evaluar"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+							s
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btRestart"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Restart"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+						</androidx.constraintlayout.widget.ConstraintLayout>
+					</TableRow>
+				</TableLayout>
+
+				<com.google.android.material.button.MaterialButton
+					android:id="@+id/btDificultad"
+					style="@style/Widget.MaterialComponents.Button"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					app:backgroundTint="#ADADAD"
+					app:icon="@drawable/ic_smile"
+					app:iconGravity="textStart"
+					app:iconPadding="0dp"
+					app:iconSize="25dp"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
 			</androidx.constraintlayout.widget.ConstraintLayout>
+			<!--			</androidx.constraintlayout.widget.ConstraintLayout>-->
 		</androidx.cardview.widget.CardView>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
