--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
@@ -26,7 +26,9 @@
 
 			<androidx.constraintlayout.widget.ConstraintLayout
 				android:layout_width="match_parent"
-				android:layout_height="match_parent">
+				android:layout_height="match_parent"
+				android:layout_marginTop="50dp"
+				android:layout_marginBottom="50dp">
 
 				<ImageView
 					android:id="@+id/ivCongratulations"
@@ -37,34 +39,68 @@
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toTopOf="parent" />
-
-				<androidx.constraintlayout.widget.ConstraintLayout
+				<!--				<androidx.constraintlayout.widget.ConstraintLayout-->
+				<!--					android:layout_width="wrap_content"-->
+				<!--					android:layout_height="wrap_content"-->
+				<!--					android:layout_margin="50dp"-->
+				<!--					app:layout_constraintBottom_toBottomOf="parent"-->
+				<!--					app:layout_constraintEnd_toEndOf="parent"-->
+				<!--					app:layout_constraintStart_toStartOf="parent"-->
+				<!--					app:layout_constraintTop_toTopOf="parent">-->
+				<TextView
+					android:id="@+id/tvJuegoCantidadPalabras"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_margin="50dp"
-					app:layout_constraintBottom_toBottomOf="parent"
+					android:gravity="center"
+					android:text="TextView"
+					android:textSize="@dimen/tamanioTextoJuegoVI"
+					android:textStyle="bold"
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toTopOf="parent">
+					app:layout_constraintTop_toTopOf="parent" />
 
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btDificultad"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="8dp"
-						app:backgroundTint="#ADADAD"
-						app:icon="@drawable/ic_smile"
-						app:iconGravity="textStart"
-						app:iconPadding="0dp"
-						app:iconSize="25dp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/btNext" />
+				<TextView
+					android:id="@+id/tvJuegoPalabraArriba"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="24dp"
+					android:gravity="center"
+					android:text="TextView"
+					android:textSize="@dimen/tamanioTextoJuegoVI"
+					android:textStyle="bold"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras" />
+
+				<com.google.android.material.button.MaterialButton
+					android:id="@+id/btMostrarRespuestaJuego"
+					android:layout_width="30dp"
+					android:layout_height="30dp"
+					android:layout_marginTop="32dp"
+					android:insetLeft="0dp"
+					android:insetTop="0dp"
+					android:insetRight="0dp"
+					android:insetBottom="0dp"
+					app:backgroundTint="#448AFF"
+					app:icon="@drawable/ic_eye_closed"
+					app:iconGravity="textStart"
+					app:iconPadding="0dp"
+					app:iconSize="25dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraArriba" />
+
+				<androidx.constraintlayout.widget.ConstraintLayout
+					android:id="@+id/lyRespuestaJuego"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="32dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/btMostrarRespuestaJuego">
 
 					<TextView
-						android:id="@+id/tvJuegoCantidadPalabras"
+						android:id="@+id/tvJuegoPalabraAbajo"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:gravity="center"
@@ -76,7 +112,7 @@
 						app:layout_constraintTop_toTopOf="parent" />
 
 					<TextView
-						android:id="@+id/tvJuegoPalabraArriba"
+						android:id="@+id/tvJuegoPalabraAbajo2"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="24dp"
@@ -84,100 +120,97 @@
 						android:text="TextView"
 						android:textSize="@dimen/tamanioTextoJuegoVI"
 						android:textStyle="bold"
+						app:layout_constraintBottom_toBottomOf="parent"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras" />
-
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btMostrarRespuestaJuego"
-						android:layout_width="30dp"
-						android:layout_height="30dp"
-						android:layout_marginTop="32dp"
-						android:insetLeft="0dp"
-						android:insetTop="0dp"
-						android:insetRight="0dp"
-						android:insetBottom="0dp"
-						app:backgroundTint="#448AFF"
-						app:icon="@drawable/ic_eye_closed"
-						app:iconGravity="textStart"
-						app:iconPadding="0dp"
-						app:iconSize="25dp"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraArriba" />
-
-					<androidx.constraintlayout.widget.ConstraintLayout
-						android:id="@+id/lyRespuestaJuego"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/btMostrarRespuestaJuego">
-
-						<TextView
-							android:id="@+id/tvJuegoPalabraAbajo"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:gravity="center"
-							android:text="TextView"
-							android:textSize="@dimen/tamanioTextoJuegoVI"
-							android:textStyle="bold"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toTopOf="parent" />
-
-						<TextView
-							android:id="@+id/tvJuegoPalabraAbajo2"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:layout_marginTop="24dp"
-							android:gravity="center"
-							android:text="TextView"
-							android:textSize="@dimen/tamanioTextoJuegoVI"
-							android:textStyle="bold"
-							app:layout_constraintBottom_toBottomOf="parent"
-							app:layout_constraintEnd_toEndOf="parent"
-							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAbajo" />
-					</androidx.constraintlayout.widget.ConstraintLayout>
-
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btNext"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						android:text="Next"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
-
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btPrevious"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						android:layout_marginEnd="22dp"
-						android:text="Previous"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toStartOf="@+id/btNext"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
-
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btRestart"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						android:text="Restart"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
+						app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAbajo" />
 				</androidx.constraintlayout.widget.ConstraintLayout>
+
+				<TableLayout
+					android:id="@+id/tableLayout2"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_marginTop="32dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">
+
+					<TableRow
+						android:layout_width="match_parent"
+						android:layout_height="match_parent">
+
+						<androidx.constraintlayout.widget.ConstraintLayout
+							android:layout_width="match_parent"
+							android:layout_height="match_parent"
+							android:layout_weight="1">
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btPrevious"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Previous"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btVolver"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Volver"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+						</androidx.constraintlayout.widget.ConstraintLayout>
+
+						<androidx.constraintlayout.widget.ConstraintLayout
+							android:layout_width="match_parent"
+							android:layout_height="match_parent"
+							android:layout_weight="1">
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btNext"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Next"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+
+							<com.google.android.material.button.MaterialButton
+								android:id="@+id/btRestart"
+								style="@style/Widget.MaterialComponents.Button"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:text="Restart"
+								app:backgroundTint="#82B1FF"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent" />
+						</androidx.constraintlayout.widget.ConstraintLayout>
+					</TableRow>
+				</TableLayout>
+
+				<com.google.android.material.button.MaterialButton
+					android:id="@+id/btDificultad"
+					style="@style/Widget.MaterialComponents.Button"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					app:backgroundTint="#ADADAD"
+					app:icon="@drawable/ic_smile"
+					app:iconGravity="textStart"
+					app:iconPadding="0dp"
+					app:iconSize="25dp"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.cardview.widget.CardView>
 	</androidx.constraintlayout.widget.ConstraintLayout>
