se crea filtrado por tag simple y se agrega limpiar busqueda

--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
@@ -20,6 +20,7 @@
 				android:id="@+id/etBusqueda"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_gravity="center"
 				android:layout_weight="1"
 				android:ems="10"
 				android:inputType="textPersonName" />
@@ -28,6 +29,7 @@
 				android:id="@+id/btBuscar"
 				android:layout_width="@dimen/filtrosIconoWidth"
 				android:layout_height="@dimen/filtrosIconoHeight"
+				android:layout_gravity="center"
 				android:layout_marginTop="1dp"
 				android:layout_marginRight="5dp"
 				android:insetLeft="0dp"
@@ -45,6 +47,7 @@
 				android:id="@+id/btLimpiart"
 				android:layout_width="@dimen/filtrosIconoWidth"
 				android:layout_height="@dimen/filtrosIconoHeight"
+				android:layout_gravity="center"
 				android:layout_marginTop="1dp"
 				android:layout_marginRight="5dp"
 				android:insetLeft="0dp"
@@ -62,6 +65,7 @@
 				android:id="@+id/btTags"
 				android:layout_width="@dimen/filtrosIconoWidth"
 				android:layout_height="@dimen/filtrosIconoHeight"
+				android:layout_gravity="center"
 				android:layout_marginTop="1dp"
 				android:layout_marginRight="5dp"
 				android:insetLeft="0dp"
