--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
@@ -54,7 +54,7 @@
 		android:layout_height="@dimen/iconoheight"
 		android:layout_marginEnd="8dp"
 		android:layout_marginRight="8dp"
-		android:layout_marginBottom="1dp"
+		android:layout_marginBottom="3dp"
 		android:insetLeft="0dp"
 		android:insetTop="0dp"
 		android:insetRight="0dp"
@@ -71,6 +71,8 @@
 		android:id="@+id/ibCorazon"
 		android:layout_width="@dimen/iconoWidth"
 		android:layout_height="@dimen/iconoheight"
+		android:layout_marginEnd="3dp"
+		android:layout_marginRight="3dp"
 		android:layout_marginBottom="3dp"
 		android:insetLeft="0dp"
 		android:insetTop="0dp"
