se corrigen estilos de tags

--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layouts/audios/layout/item_tags.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layouts/audios/layout/item_tags.xml
@@ -2,15 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="110px"
+	android:layout_height="150px"
 	android:orientation="vertical">
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/btTag"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="0dp"
+		android:layout_height="35dp"
+		android:padding="0dp"
 		android:text="tag"
 		app:backgroundTint="@color/colorBotonTag"
 		app:iconPadding="0dp"
-		app:iconSize="40dp" />
+		app:iconSize="40dp"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
