--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layouts/audios/layout/item_audio.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layouts/audios/layout/item_audio.xml
@@ -1,107 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="300px"
-	android:background="#80D8FF"
-	android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="300px"
+    android:background="#80D8FF"
+    android:orientation="vertical">
 
-	<TextView
-		android:id="@+id/tvCiudadDescripcion"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:shadowColor="#000"
-		android:shadowDx="5"
-		android:shadowDy="5"
-		android:shadowRadius="5"
-		android:text="Descripcion"
-		android:textColor="#FFFFFF"
-		android:textStyle="bold|italic"
-		android:visibility="invisible"
-		tools:layout_editor_absoluteX="16dp"
-		tools:layout_editor_absoluteY="64dp" />
+    <TextView
+        android:id="@+id/tvAudioDescripcion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:shadowColor="#000"
+        android:shadowDx="5"
+        android:shadowDy="5"
+        android:shadowRadius="5"
+        android:text="Descripcion"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold|italic"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvListadoTags" />
 
-	<TextView
-		android:id="@+id/tvCiudadNombre"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Nombre"
-		android:textColor="#FFFFFF"
-		android:textSize="18sp"
-		android:textStyle="bold"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tvAudioNombre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nombre"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/rvListadoTags"
-		android:layout_width="match_parent"
-		android:layout_height="45dp"
-		app:layout_constraintTop_toBottomOf="@+id/tvCiudadNombre"
-		tools:layout_editor_absoluteX="8dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvListadoTags"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvAudioNombre"
+        tools:layout_editor_absoluteX="8dp" />
 
-	<View
-		android:id="@+id/view"
-		android:layout_width="wrap_content"
-		android:layout_height="1dp"
-		android:background="#525252"
-		app:layout_constraintBottom_toBottomOf="parent"
-		tools:layout_editor_absoluteX="8dp" />
+    <View
+        android:id="@+id/view"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#525252"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="8dp" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btPlay"
-		android:layout_width="@dimen/iconoWidth"
-		android:layout_height="@dimen/iconoheight"
-		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
-		android:layout_marginBottom="3dp"
-		android:insetLeft="0dp"
-		android:insetTop="0dp"
-		android:insetRight="0dp"
-		android:insetBottom="0dp"
-		app:backgroundTint="@color/colorBoton1"
-		app:icon="@drawable/ic_play_arrow_24px"
-		app:iconGravity="textStart"
-		app:iconPadding="0dp"
-		app:iconSize="50dp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toStartOf="@+id/btShare" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btPlay"
+        android:layout_width="@dimen/iconoWidth"
+        android:layout_height="@dimen/iconoheight"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="3dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        app:backgroundTint="@color/colorBoton1"
+        app:icon="@drawable/ic_play_arrow_24px"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:iconSize="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btShare" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/ibCorazon"
-		android:layout_width="@dimen/iconoWidth"
-		android:layout_height="@dimen/iconoheight"
-		android:layout_marginEnd="3dp"
-		android:layout_marginRight="3dp"
-		android:layout_marginBottom="3dp"
-		android:insetLeft="0dp"
-		android:insetTop="0dp"
-		android:insetRight="0dp"
-		android:insetBottom="0dp"
-		app:backgroundTint="@color/colorBoton1"
-		app:icon="@drawable/ic_like_1"
-		app:iconGravity="textStart"
-		app:iconPadding="0dp"
-		app:iconSize="30dp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/ibCorazon"
+        android:layout_width="@dimen/iconoWidth"
+        android:layout_height="@dimen/iconoheight"
+        android:layout_marginEnd="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        app:backgroundTint="@color/colorBoton1"
+        app:icon="@drawable/ic_like_1"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:iconSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btShare"
-		android:layout_width="@dimen/iconoWidth"
-		android:layout_height="@dimen/iconoheight"
-		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
-		android:layout_marginBottom="3dp"
-		android:insetLeft="0dp"
-		android:insetTop="0dp"
-		android:insetRight="0dp"
-		android:insetBottom="0dp"
-		app:backgroundTint="@color/colorBoton1"
-		app:icon="@drawable/ic_share_24px"
-		app:iconGravity="textStart"
-		app:iconPadding="0dp"
-		app:iconSize="35dp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toStartOf="@+id/ibCorazon" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btShare"
+        android:layout_width="@dimen/iconoWidth"
+        android:layout_height="@dimen/iconoheight"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="3dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        app:backgroundTint="@color/colorBoton1"
+        app:icon="@drawable/ic_share_24px"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:iconSize="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ibCorazon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
