--- a/CuantoCuesta/app/src/main/res/layout/activity_main.xml
+++ b/CuantoCuesta/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"></FrameLayout>
 
 
 
